# stm32f411ce-template

./: .gitignore  .gitmodules  CMakeLists.txt  arm-gcc-toolchain.cmake
blinky/: CMakeLists.txt  clock.cpp  main.cpp
ucos2_blackpill/cfg/: app_cfg.h
ucos2_blackpill/port/: os_cpu_c.c
ucos2_blackpill/port/gnu/: os_cpu.h
